--- a/index.html
+++ b/index.html
@@ -1,42 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    <div class="navigation">
-        <nav>
-            <h2 class="logo">BLOG</h2>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Blog</a></li>
-            </ul>
-            <h3>img</h3>
-        </nav>
-        <div class="main">
-            <img src="../img/im1.jpg" class="self" alt="">
-            <div class="info">
-            <h3 id="me" style="color:#72b626">- I'M SUYASH PRADHAN</h3>
-            <h2 id="int" style="color:brown">INTERN</h2>
-            <p class="para">I am currently an intern in Fusemmanhines and develiping my portfoloi website.I work from home and likes to try new tyhings while coding. </p>
-            <div>
+  </head>
+  <body>
+    <header class="">
+      <nav>
+        <h2 class="logo">SUYASH</h2>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <h3>img</h3>
+      </nav>
+    </header>
+    <main>
+      <div class="mains">
+        <img src="../img/im1.jpg" class="self" alt="" />
+        <div class="info">
+          <h3 id="me" style="color: #72b626">- I'M SUYASH PRADHAN</h3>
+          <h2 id="int" style="color: brown">INTERN</h2>
+          <p class="para">
+            I am currently an intern in Fuse manhines and developing my
+            portfoloi website.I work remotely from my home and I like to try new
+            things while promming a website.
+          </p>
         </div>
-    </div>
-
-    <section class="about">
+      </div>
+      <section class="about" id="about">
+        <h1 class="about-tit">About<span> me</span></h1>
+        <div class="about-cont">
+          <div class="infos">
+            <h2>Personal infos</h2>
+            <table>
+              <tr>
+                <td>First Name:Suyash</td>
+                <td>Address: Thamel</td>
+              </tr>
+              <tr>
+                <td>Last Name: Pradhan</td>
+                <td>Phone: 9841752988</td>
+              </tr>
+              <tr>
+                <td>Age: 20 years</td>
+                <td>Email: suyash@gmail.com</td>
+              </tr>
+              <tr>
+                <td>Nationality: Nepali</td>
+                <td>Whatsapp: suyash</td>
+              </tr>
+              <tr>
+                <td>Job: Intern</td>
+                <td>Language: English, Nepali</td>
+              </tr>
+            </table>
+          </div>
+          <div class="whole">
+            <div class="item">
+              <div class="text">
+                <p class="big">O</p>
+                <p class="small">Years of experience</p>
+              </div>
+            </div>
+            <div class="item">
+              <div class="text">
+                <p class="big">2</p>
+                <p class="small">Projects Completed</p>
+              </div>
+            </div>
+            <div class="item">
+              <div class="text">
+                <p class="big">O</p>
+                <p class="small">Customers</p>
+              </div>
+            </div>
+            <div class="item">
+              <div class="text">
+                <p class="big">O</p>
+                <p class="small">Years of experience</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="skills" id="skills">
+        <div class="skil">
+          <h2 class="title">My Skills</h2>
+          <div class="skill-content">
+            <div class="column left">
+              <div class="text">My Skills and Creativity</div>
+              <p>
+                I have knowledge about programming languages such as HTML, CSS,
+                JAVASCRIPT. I have developed some small web applications in my
+                free time as well as in my collge days.I am even proficient in
+                using GitHub.
+              </p>
+              <a href="#">Read more</a>
+            </div>
+            <div class="column right">
+              <div class="bars">
+                <div class="infor">
+                  <span>HTML</span>
+                  <span>60%</span>
+                </div>
+                <div class="line html"></div>
+              </div>
+              <div class="bars">
+                <div class="infor">
+                  <span>CSS</span>
+                  <span>50%</span>
+                </div>
+                <div class="line css"></div>
+              </div>
+              <div class="bars">
+                <div class="infor">
+                  <span>JAVASCRIPT</span>
+                  <span>40%</span>
+                </div>
+                <div class="line js"></div>
+              </div>
+              <div class="bars">
+                <div class="infor">
+                  <span>REACT</span>
+                  <span>40%</span>
+                </div>
+                <div class="line react"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="contact" id="contact">
         <div>
-            <h2>about me</h2>
-        
+          <h2 class="title">Contact Me</h2>
+          <div class="contact-content">
+            <div class="column left">
+              <div class="text">Get In Touch</div>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book. It has
+                survived not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged.
+              </p>
+              <div class="icons">
+                <div class="row">
+                  <i class="fas fa-user"></i>
+                  <div class="infor">
+                    <div class="head">Name</div>
+                    <div class="sub-title">Suyash Pradhan</div>
+                  </div>
+                </div>
+                <div class="row">
+                  <i class="fas fa-user"></i>
+                  <div class="infor">
+                    <div class="head">Address</div>
+                    <div class="sub-title">Thamel, Kathmandu</div>
+                  </div>
+                </div>
+                <div class="row">
+                  <i class="fas fa-user"></i>
+                  <div class="infor">
+                    <div class="head">Name</div>
+                    <div class="sub-title">Suyash Pradhan</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="column right">
+              <div class="text" style="margin-bottom: 10px">Message me</div>
+              <form action="#form">
+                <div class="fields">
+                  <div class="field name">
+                    <input type="text" placeholder="Name" />
+                  </div>
+                  <div class="field email">
+                    <input type="text" placeholder="Email" />
+                  </div>
+                </div>
+                <div class="field">
+                  <input type="text" placeholder="Subject" />
+                </div>
+                <div class="field textarea">
+                  <textarea
+                    cols="60"
+                    rows="10"
+                    placeholder="Describe"
+                  ></textarea>
+                </div>
+                <div class="button">
+                  <button type="submit">Send message</button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
-
-    </section>
-        
-</body>
+      </section>
+    </main>
+    <footer>
+      <p class="foot">Suyash Pradhan</p>
+      <p>
+        If you want to no more follow me on Facebook, Instagram and Linkedin
+      </p>
+      <div class="social">
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+      </div>
+    </footer>
+  </body>
 </html>
